More bugfixing for OpenSSL 1.1 in .travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,21 +23,21 @@ matrix:
       dist: trusty
     - os: osx
       compiler: clang
-      env: OPENSSL1.1=false
+      env: OPENSSL_VER="1.0"
     - os: osx
       compiler: clang
-      env: OPENSSL1.1=true
+      env: OPENSSL_VER="1.1"
 
 before_install:
 - |
-  if [[ "${TRAVIS_OS_NAME}" == "osx" && OPENSSL1.1 == "false" ]]; then
+  if [[ "${TRAVIS_OS_NAME}" == "osx" && OPENSSL_VER == "1.0" ]]; then
     brew update
     brew install swig
     brew outdated openssl || brew upgrade openssl
     brew outdated cmake || brew upgrade cmake
   fi
 - |
-  if [[ "${TRAVIS_OS_NAME}" == "osx" && OPENSSL1.1 == "true" ]]; then
+  if [[ "${TRAVIS_OS_NAME}" == "osx" && OPENSSL_VER == "1.1" ]]; then
     brew update
     brew install swig
     brew outdated openssl@1.1 || brew upgrade openssl@1.1
